uncomment commented out tests